Updated Entites & Services, Entites updated for patterns and relational mapping and services updated for minor change